Machine list now loads and saves.

--- a/app.config
+++ b/app.config
@@ -27,12 +27,18 @@
 	</system.diagnostics>
 	<userSettings>
 		<VirtualMac.My.MySettings>
-			<setting name="DefaultMacFolder" serializeAs="String">
-				<value>UserDocumentPath</value>
-			</setting>
-			<setting name="DefaultROM" serializeAs="String">
-				<value>Mac.ROM</value>
-			</setting>
-		</VirtualMac.My.MySettings>
+   <setting name="DefaultMacFolder" serializeAs="String">
+    <value>UserDocumentPath</value>
+   </setting>
+   <setting name="DefaultROM" serializeAs="String">
+    <value>Mac.ROM</value>
+   </setting>
+   <setting name="MacList" serializeAs="Xml">
+    <value>
+     <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xmlns:xsd="http://www.w3.org/2001/XMLSchema" />
+    </value>
+   </setting>
+  </VirtualMac.My.MySettings>
 	</userSettings>
 	<startup/></configuration>
