VM Settings will now save to file and config.

--- a/app.config
+++ b/app.config
@@ -35,10 +35,9 @@
    </setting>
    <setting name="MacList" serializeAs="Xml">
     <value>
-     <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      xmlns:xsd="http://www.w3.org/2001/XMLSchema" />
+     <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"/>
     </value>
    </setting>
   </VirtualMac.My.MySettings>
 	</userSettings>
-	<startup/></configuration>
+	<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
